hide large prints

--- a/Missions_to_Mars/Mission_to_Mars.ipynb
+++ b/Missions_to_Mars/Mission_to_Mars.ipynb
@@ -725,7 +725,7 @@
    ],
    "source": [
     "# Print formatted version of the soup\n",
-    "print(soup.prettify())"
+    "# print(soup.prettify())"
    ]
   },
   {
@@ -891,7 +891,7 @@
     "# browser = Browser('chrome', **executable_path, headless=False)\n",
     "# browser.visit(url)\n",
     "tables = pd.read_html(url)\n",
-    "tables"
+    "# tables"
    ]
   },
   {
